fix(main container): spacing and sections

--- a/src/shared/containers/Main/Main.scss
+++ b/src/shared/containers/Main/Main.scss
@@ -1,5 +1,5 @@
 @import "../../globals/styles/_global.scss";
 
-.ObjectSummary {
+.Main {
 	padding: 8px;
 }
